  fixed         = fixed bugs, "features" and other sources of problems

  [foobar]      = tag identifying the author of the change; see 
	          README for a complete list contributor tags; entries 
		  with no tags are from the main author(s)

***********************************************************************

xxyy2010 (v2.7.2) -** stable release **-
	 - changed: liboil now enabled by default if the library 
	   	    development files are available when running
		    configure
	 - fixed: bug with 'resample' objects and early seeks (e.g.
	   	  with '-y' offsets); reported by Artur
         - fixed: bugs in kvutils that broke some old/non-glibc 
	   	  builds (e.g. cygwin); bug reported by Al Oomens
20022010 (v2.7.1) -** stable release **-
	- note: key changes are described in more detail at:
                http://eca.cx/relnotes/ecasound_v2_7_1_relnotes.txt
	- fixed: glitches in ALSA capture/playback with some sound 
	  	 hardware/configurations, and using alsa-lib
	    	 older than 1.0.15; related to deprecated ALSA API
		 function snd_pcm_sw_params_set_xfer_align()
        - fixed: bug in removing audio objects when disk double
	  	 buffering is used (-z:db); could cause a segfault
		 in some scenarios (e.g. with ecasignalview)
        - fixed: interactive mode; c-selected segfauls if issued
	    	 with no chainsetup selected
        - fixed: build errors when no liblo is available
	- fixed: interactive-mode; cs-setpos, cs-rewind and cs-forward
	    	 did not work if chainsetup was connected, and no
		 chains (or an invalid chain) was selected; bug 
		 reported by Joel Roth
        - fixed: ecalength choked filenames with whitespace; patch
	  	 from FUJI project
		 (http://students.mimuw.edu.pl/~tk197881/a8cas/)
17102009 (v2.7.0) -** stable release **-
	- note: key changes are described in more detail at:
                http://eca.cx/relnotes/ecasound_v2_7_0_relnotes.txt
	- added: new exit code of '4' to ecasound; see entry below